@@ -1,6 +1,8 @@
-$Id: ChangeLog,v 1.184 2005-12-01 15:00:24 peterlin Exp $
+$Id: ChangeLog,v 1.185 2005-12-01 15:03:24 peterlin Exp $
 
 2005-12-01  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>
+
+	* Makefile: created a Makefile to assist building.
 
 	* README: an update.
 
